--- a/src/uLearn.Web/Views/Shared/_UserListPartial.cshtml
+++ b/src/uLearn.Web/Views/Shared/_UserListPartial.cshtml
@@ -43,7 +43,13 @@
 	                <span title="@user.UserName">@user.UserVisibleName</span>
                 }
             </td>
-			<td>@Model.UsersGroups.GetOrDefault(user.UserId, "")</td>
+            <td>
+                @Model.UsersGroups.GetOrDefault(user.UserId, "")
+                @if (Model.UsersArchivedGroups.ContainsKey(user.UserId) && !string.IsNullOrEmpty(Model.UsersArchivedGroups[user.UserId]))
+                {
+	                <div class="text-muted">Архив: @Model.UsersArchivedGroups[user.UserId]</div>
+                }
+             </td>
 			@if (Model.CanToggleRoles)
 			{
 				<td>
