--- a/src/uLearn.Web/Content/antiplagiarism.css
+++ b/src/uLearn.Web/Content/antiplagiarism.css
@@ -53,6 +53,10 @@
     margin-left: 10px;
 }
 
+.antiplagiarism__user-groups__archived {
+    text-decoration: line-through;   
+}
+
 .antiplagiarism__not-analyzed {
     color: #ccc !important;   
 }
