Truncate group's name if it's very long
+ raise the exception from PolynomialSequenceHasher

--- a/src/uLearn.Web/Views/Admin/Groups.cshtml
+++ b/src/uLearn.Web/Views/Admin/Groups.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Database.Extensions
 @using Database.Models
+@using uLearn.Extensions
 @using uLearn.Web.Extensions
 @using uLearn.Web.Views.Shared
 @using Ulearn.Common
