--- a/src/uLearn.Web/Views/Admin/ManualExerciseCheckingQueue.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManualExerciseCheckingQueue.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Database.Models
 @using RestSharp.Extensions
+@using uLearn.Extensions
 @using uLearn.Web.Extensions
 @using Ulearn.Common
 @using Ulearn.Common.Extensions
