--- a/src/uLearn.Web/Views/Analytics/CourseStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/CourseStatistics.cshtml
@@ -1,6 +1,7 @@
 ﻿@using System.Linq
 @using Database.Extensions
 @using Database.Models
+@using uLearn.Extensions
 @using uLearn.Web.Extensions
 @using Ulearn.Common
 @using Ulearn.Common.Extensions
