--- a/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Database.Models
 @using uLearn
+@using uLearn.Extensions
 @using uLearn.Quizes
 @using uLearn.Web.Extensions
 @using Ulearn.Common
