--- a/src/uLearn.Web/Views/Shared/Notifications.cshtml
+++ b/src/uLearn.Web/Views/Shared/Notifications.cshtml
@@ -2,6 +2,7 @@
 @using Database.Models
 @using Microsoft.AspNet.Identity
 @using uLearn
+@using uLearn.Extensions
 @using uLearn.Quizes
 @using uLearn.Web.Extensions
 @using uLearn.Web.Views.Shared
