--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 @using Database.Extensions
 @using Database.Models
 @using uLearn
+@using uLearn.Extensions
 @using uLearn.Web.Controllers
 @using uLearn.Web.Extensions
 <!DOCTYPE html>
