--- a/src/uLearn.Web/Views/Admin/_GroupMember.cshtml
+++ b/src/uLearn.Web/Views/Admin/_GroupMember.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Database.Extensions
 @using Database.Models
+@using uLearn.Extensions
 @using uLearn.Web.Extensions
 @using uLearn.Web.Views.Shared
 @using Ulearn.Common
