--- a/src/uLearn.Web/Views/Comments/_Comment.cshtml
+++ b/src/uLearn.Web/Views/Comments/_Comment.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Database.Models
+@using uLearn.Extensions
 @using uLearn.Web.Extensions
 @using uLearn.Web.Views.Shared
 @model CommentViewModel
