CheckForPlagiarism option in exercise

--- a/src/uLearn.Web/Content/antiplagiarism.css
+++ b/src/uLearn.Web/Content/antiplagiarism.css
@@ -8,6 +8,10 @@
     margin: 0;
 }
 
+.antiplagiarism-status.not-checked {
+    background-color: #eaf5e5;
+}
+
 .antiplagiarism-status.found-none,
 .antiplagiarism-status.found-level0 {
     background-color: #cafac1;
