Fix bug with user deleting
add total-error page

--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Web.UI.WebControls
-@using Database
+﻿@using Database
 @using Database.Extensions
 @using Database.Models
 @using uLearn
