--- a/src/uLearn.Web/Content/antiplagiarism.css
+++ b/src/uLearn.Web/Content/antiplagiarism.css
@@ -8,6 +8,28 @@
     margin: 0;
 }
 
+.antiplagiarism-status.fixed {
+    position: fixed;
+    top: 50px;
+    z-index: 5;
+}
+
+@media (min-width: 768px) {
+    .antiplagiarism-status.fixed {
+        width: 750px;
+    }
+}
+@media (min-width: 992px) {
+    .antiplagiarism-status.fixed {
+        width: 970px;
+    }
+}
+@media (min-width: 1200px) {
+    .antiplagiarism-status.fixed {
+        width: 1170px;
+    }
+}
+
 .antiplagiarism-status b {
     font-weight: 600;
 }
