Some small fixes for sandbox
Fix sandbox runner

--- a/src/uLearn.Web/Views/Sandbox/RunCode.cshtml
+++ b/src/uLearn.Web/Views/Sandbox/RunCode.cshtml
@@ -6,7 +6,7 @@
 	ViewBag.Title = "Run code";
 }
 
-<div class="container">
+<div class="container exercise__submission">
 	@if (User.HasAccess(CourseRole.Instructor))
 	{
 		@SlideHtml.CodeTextArea(@"using System;
