--- a/src/uLearn.Web/Views/Sandbox/Index.cshtml
+++ b/src/uLearn.Web/Views/Sandbox/Index.cshtml
@@ -10,7 +10,7 @@
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<a href="@Url.Action("RunCode", "Sandbox")" class="btn btn-primary btn-large">Run code &raquo;</a>
+<a href="@Url.Action("RunCode", "Sandbox")" class="btn btn-primary btn-large">Run C# code &raquo;</a>
 
 <table class="table table-hover table-striped">
 	<thead>
