--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -2237,6 +2237,24 @@ h1 .copy-group-link {
 	margin-bottom: 10px;
 }
 
+.manual-checkings-left {
+	display: block;
+	margin-left: 189px;
+	margin-top: 7px;
+}
+
+@media (max-width: 790px) {
+	.manual-checkings-left {
+		margin-left: 10px;
+	}
+}
+
+.no-manual-checkings-left {
+    display: inline-block;
+    margin-left: 7px;
+    vertical-align: middle;
+}
+
 #exercise__submission__output {
 	margin-top: 10px;
 	font-family: monospace;
