--- a/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
+++ b/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
@@ -26,23 +26,23 @@
 		<div class="slide-container">
 			<div class="container body-content">
 				<div class="row">
-				@SlideHtml.Slide(new BlockRenderContext(course, slide, "/static/",
-						slide.Blocks.Select(
-						(b, i) => b is ExerciseBlock
-							? new ExerciseBlockData(course.Id, (ExerciseSlide)slide) { RunSolutionUrl = "/" + slide.Index.ToString("000") + ".html?query=submit", DebugView = true, IsGuest = false }
-							: b is AbstractQuestionBlock
-									? new QuizBlockData(new QuizModel
-									{
-										AnswersToQuizes = slide.Blocks.OfType<AbstractQuestionBlock>().ToDictionary(x => x.Id, x => new List<UserQuiz>()),
-                                        Slide = (QuizSlide)slide
-                                    }, i, QuizState.Total)
-									: (dynamic)null
-							).ToArray(),
-						false,
-						true
-						),
-						null)
-					<ul>
+                    @SlideHtml.Slide(new BlockRenderContext(course, slide, "/static/",
+	                    slide.Blocks.Select(
+		                    (b, i) => b is ExerciseBlock
+			                    ? new ExerciseBlockData(course.Id, (ExerciseSlide)slide) { RunSolutionUrl = "/" + slide.Index.ToString("000") + ".html?query=submit", DebugView = true, IsGuest = false }
+			                    : b is AbstractQuestionBlock
+				                    ? new QuizBlockData(new QuizModel
+				                    {
+					                    AnswersToQuizes = slide.Blocks.OfType<AbstractQuestionBlock>().ToDictionary(x => x.Id, x => new List<UserQuiz>()),
+					                    Slide = (QuizSlide)slide
+				                    }, i, QuizState.Total)
+				                    : (dynamic)null
+		                    ).ToArray(),
+	                    isGuest: false,
+	                    revealHidden: true
+	                    ),
+	                    null)
+                    <ul>
 						<li>
 							<a href="/@(slide.Index.ToString("000")).html?query=addLesson">Добавить слайд</a>
 						</li>
