Remove SuggestMailTransport popup

--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -133,7 +133,7 @@
 </div>
 @RenderBody()
 
-@Html.Action("SuggestMailTransport", "Notifications")
+@*@Html.Action("SuggestMailTransport", "Notifications")*@
 @Html.Action("CheckIsEmailConfirmed", "Account")
 
 @Scripts.Render("~/scripts.bundle.js")
