--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -210,9 +210,7 @@ p + .revealed {
 
 .jumbotron-logo {
 	float: left;
-	margin: 30px;
-	margin-top: -20px;
-	margin-bottom: 0;
+    margin: -20px 30px 0;
 }
 
 .slide-container .container,
@@ -222,6 +220,10 @@ p + .revealed {
 
 .slide {
 	padding-bottom: 10px;
+}
+
+.slide .slide__title {
+    margin-right: 20px;
 }
 
 /* ReSharper disable Html.CssClassElementsNotFound */
